--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
 edition = "2018"
 description = "Simple application to keep track of your config symlinks."
 repository = "https://github.com/pustaczek/linkforeman"
+license = "MPL-2.0"
 categories = ["command-line-utilities"]
 
 [dependencies]
