--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ license = "MPL-2.0"
 categories = ["command-line-utilities"]
 
 [dependencies]
-anyhow = "1.0.32"
-clap = "=3.0.0-beta.1"
-dirs = "3.0.1"
-serde = { version = "1.0.115", features = ["derive"] }
-toml = "0.5.6"
-walkdir = "2.3.1"
+anyhow = "1.0"
+clap = { version = "3.2", features = ["derive"] }
+dirs = "3.0"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
+walkdir = "2.3"
